--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
 $colorBg: #040714;
 $colorMainText: silver;
 $colorSecondaryText: #f9f9f9;
+$colorBgPrimaryButton: #6421ff;
+$colorBgSecondaryButton: #0063e5;
+$colorBgDarkButton: #000;
