--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,10 @@
 @use 'hero';
 @use 'shows';
 @use 'plans';
+@use 'available-devices';
+@use 'faq';
+@use 'footer';
+@use 'header';
 
 @font-face {
     font-family: Avenir;
@@ -19,6 +23,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Avenir, sans-serif;
+    list-style: none;
 }
 
 body {
@@ -67,15 +72,81 @@ body {
 }
 
 .button {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 60px;
     font-size: 18px;
     color: variaveis.$colorSecondaryText;
-    background-color: #6421ff;
+    background-color: variaveis.$colorBgPrimaryButton;
     text-transform: uppercase;
     border-radius: 4px;
-    margin-top: 2vw;
-    margin-bottom: 8px;
+    text-decoration: none;
+    padding: 8px 14px;
     cursor: pointer;
+    letter-spacing: 1px;
+    border: 1px solid variaveis.$colorBgPrimaryButton;
+
+    &:hover {
+            background-color: lighten(variaveis.$colorBgPrimaryButton, 3%);
+        }
+
+    &--secondary {
+        background-color: variaveis.$colorBgSecondaryButton;
+        border-color: variaveis.$colorBgSecondaryButton;
+
+        &:hover {
+            background-color: lighten(variaveis.$colorBgSecondaryButton, 3%);
+        }
+    }
+
+    &--dark {
+        background-color: rgba(variaveis.$colorBgDarkButton, 0.8);
+        border-color: variaveis.$colorSecondaryText;
+
+        &:hover {
+            background-color: variaveis.$colorSecondaryText;
+            color: variaveis.$colorBg;
+        }
+    }
+}
+
+.image-text-section {
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    img {
+        max-width: 100%;
+    }
+
+    &__text_container {
+        padding: 2vw;
+        
+        h2 {
+            margin-bottom: 24px;
+        } 
+    }
+
+    &--image-full-width {
+        display: block;
+        position: relative;
+
+        img {
+            width: 100%;
+        }
+
+        &__text_container {
+            position: absolute;
+            top: 0vw;
+            left: 50%;
+            width: calc(50% - 5.6vw);
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+    }
 }
