ajustes no mobile

--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -10,12 +10,27 @@
         justify-content: space-around;
         margin-top: 50px;
 
+        @media (max-width:768px){
+            display: block;
+        }
+
+        .button {
+            margin-top: 24px;
+        }
+
 
         &__item {
             text-align: center;
             padding:  60px 44px 44px;
             max-width: 380px;
             width: 100%;
+
+            @media (max-width:768px){
+                img {
+                    max-width: 257.500px;
+                    max-height: 73.563px;
+                }
+            }
 
             &:nth-child(2) {
                 background-image: url(../images/fundo_combo_plus.png);
