--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -11,6 +11,10 @@
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
 
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+        }
+
         &--is--active {
             display: grid;
         }
@@ -26,7 +30,12 @@
     &__tabs {
         display: flex;
         justify-content: center;
-
+        
+        @media (max-width:768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+        }
 
         &__button {
             color: variaveis.$colorSecondaryText;
@@ -41,6 +50,10 @@
 
             &--is--active {
                 border-color: variaveis.$colorSecondaryText;
+            }
+
+            @media (max-width:768px) {
+                font-size: 16px;
             }
         }
     }
